[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/gui/GUI.gd" type="Script" id=1]
[ext_resource path="res://Asset/UI/KenneyBasePack/font_semi_bold_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Asset/UI/highlight.png" type="Texture" id=5]
[ext_resource path="res://Asset/boost-ok.png" type="Texture" id=6]
[ext_resource path="res://Asset/boost-pressed.png" type="Texture" id=7]
[ext_resource path="res://Asset/boost-disabled.png" type="Texture" id=8]
[ext_resource path="res://Asset/x2.png" type="Texture" id=9]
[ext_resource path="res://Asset/x2-pressed.png" type="Texture" id=10]
[ext_resource path="res://Asset/x2-disabled.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 200
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 40
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 3 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1260, 680 )
custom_constants/margin_right = 10
custom_constants/margin_top = 40
custom_constants/margin_left = 10

[node name="Row" type="HBoxContainer" parent="Inner"]
margin_left = 10.0
margin_top = 40.0
margin_right = 1270.0
margin_bottom = 444.0
grow_horizontal = 0
size_flags_vertical = 2
custom_constants/separation = 50

[node name="Col1" type="VBoxContainer" parent="Inner/Row"]
margin_right = 200.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 0 )

[node name="Laps" type="Label" parent="Inner/Row/Col1"]
margin_right = 200.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Lap 1/3"
align = 1

[node name="Pos0" type="Label" parent="Inner/Row/Col1"]
margin_top = 35.0
margin_right = 200.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Lap 1/3"

[node name="Pos1" type="Label" parent="Inner/Row/Col1"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 101.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "1- Molkobain (*)"

[node name="Pos2" type="Label" parent="Inner/Row/Col1"]
margin_top = 105.0
margin_right = 200.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Lap 1/3"

[node name="Pos3" type="Label" parent="Inner/Row/Col1"]
margin_top = 140.0
margin_right = 200.0
margin_bottom = 171.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Lap 1/3"

[node name="Pos4" type="Label" parent="Inner/Row/Col1"]
margin_top = 175.0
margin_right = 200.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Lap 1/3"

[node name="Pos5" type="Label" parent="Inner/Row/Col1"]
margin_top = 210.0
margin_right = 200.0
margin_bottom = 241.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Lap 1/3"

[node name="Pos6" type="Label" parent="Inner/Row/Col1"]
margin_top = 245.0
margin_right = 200.0
margin_bottom = 276.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Lap 1/3"

[node name="Pos7" type="Label" parent="Inner/Row/Col1"]
margin_top = 280.0
margin_right = 200.0
margin_bottom = 311.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Lap 1/3"

[node name="Col2" type="VBoxContainer" parent="Inner/Row"]
margin_left = 250.0
margin_right = 1010.0
margin_bottom = 404.0
size_flags_horizontal = 3

[node name="MMessage" type="MarginContainer" parent="Inner/Row/Col2"]
margin_right = 760.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="Message" type="Label" parent="Inner/Row/Col2/MMessage"]
margin_right = 760.0
margin_bottom = 60.0
grow_horizontal = 0
rect_min_size = Vector2( 712, 60 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Reaction time: 0.000s"
align = 1

[node name="MMain" type="MarginContainer" parent="Inner/Row/Col2"]
margin_top = 64.0
margin_right = 760.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 340 )

[node name="Main" type="VBoxContainer" parent="Inner/Row/Col2/MMain"]
margin_right = 760.0
margin_bottom = 340.0
rect_min_size = Vector2( 712, 340 )

[node name="MainTiTle" type="Label" parent="Inner/Row/Col2/MMain/Main"]
visible = false
margin_right = 760.0
margin_bottom = 82.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.441406, 0.427612, 0.427612, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "TEXTE SUPER LONG"
align = 1
uppercase = true

[node name="MainCountdown" type="Label" parent="Inner/Row/Col2/MMain/Main"]
visible = false
margin_right = 760.0
margin_bottom = 254.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.441406, 0.427612, 0.427612, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1

[node name="Col3" type="VBoxContainer" parent="Inner/Row"]
margin_left = 1060.0
margin_right = 1260.0
margin_bottom = 404.0
rect_min_size = Vector2( 200, 0 )

[node name="Margin" type="MarginContainer" parent="Inner/Row/Col3"]
margin_left = 129.0
margin_right = 200.0
margin_bottom = 62.0
rect_min_size = Vector2( 71, 62 )
size_flags_horizontal = 8

[node name="Highlight" type="NinePatchRect" parent="Inner/Row/Col3/Margin"]
visible = false
modulate = Color( 1, 0, 0, 0.535922 )
margin_right = 71.0
margin_bottom = 62.0
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Margin" type="MarginContainer" parent="Inner/Row/Col3/Margin"]
margin_right = 71.0
margin_bottom = 62.0
size_flags_horizontal = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="Countdown" type="Label" parent="Inner/Row/Col3/Margin/Margin"]
margin_left = 23.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 57.0
grow_horizontal = 0
size_flags_horizontal = 8
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "15"
align = 2

[node name="MarginBoost" type="MarginContainer" parent="Inner/Row/Col3"]
margin_top = 66.0
margin_right = 200.0
margin_bottom = 76.0
rect_min_size = Vector2( 200, 0 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 130
custom_constants/margin_bottom = 5

[node name="Boost" type="TextureButton" parent="Inner/Row/Col3/MarginBoost"]
visible = false
margin_left = 130.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 66.0
rect_min_size = Vector2( 64, 0 )
disabled = true
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[node name="Marginx2" type="MarginContainer" parent="Inner/Row/Col3"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 151.0
rect_min_size = Vector2( 200, 71 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 130
custom_constants/margin_bottom = 5

[node name="x2" type="TextureButton" parent="Inner/Row/Col3/Marginx2"]
visible = false
margin_left = 130.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 66.0
rect_min_size = Vector2( 64, 61 )
disabled = true
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )

[node name="HighlightTween" type="Tween" parent="."]

[connection signal="toggled" from="Inner/Row/Col3/MarginBoost/Boost" to="." method="_on_Boost_toggled"]
[connection signal="toggled" from="Inner/Row/Col3/Marginx2/x2" to="." method="_on_x2_toggled"]
